Fix `.button-spot:link` on smaller screens

--- a/styles.css
+++ b/styles.css
@@ -97,13 +97,13 @@
   .button-return { padding: 10px; width: 80px; height: 80px; border-radius: 10px; }
   .button-help   { padding: 10px; width: 80px; height: 80px; border-radius: 10px; }
   .button-spot:link {
-    width: 170px;
-    height: 42px;
-    border-radius: 10px 10px 0 0;
+    width: 170px !important;
+    height: 42px !important;
+    border-radius: 10px 10px 0 0 !important;
     padding-top: 16px;
-    top: 543px;
-    left: calc(50vw - 507px);
-    line-height: 28px;
+    top: 543px !important;
+    left: calc(50vw - 507px) !important;
+    line-height: 28px !important;
   }
   .cookie-container { display: none; }
   .intro-button-container {
